[tool.poetry]
name = "mkinf-run"
version = "0.1.0"
description = ""
authors = ["mkinf <info@mkinf.io>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = "0.34.0"
requests = "2.32.3"
supabase = "2.11.0"
gotrue = "2.11.1"
tiktoken = "0.8.0"
mcp = "1.2.1"
termcolor = "2.5.0"
e2b = "1.0.6"

[tool.poetry.scripts]
mkinf-run = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
