[tool.poetry]
name = "bing_search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "0.3.9"
langchain_core = "0.3.21"
pydantic = "2.10.3"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
