[tool.poetry]
name = "scrapegraphai_tool"
version = "0.36.0"
description = "Python scraper based on AI"
authors = ["ScrapeGraphAI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.3.9"
langchain_core = "0.3.21"
pydantic = "2.10.3"
scrapegraphai = "1.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
