[tool.poetry]
name = "gitingest_tool"
version = "0.1.2"
description = "Replace 'hub' with 'ingest' in any github url to get a prompt-friendly extract of a codebase"
authors = ["cyclotruc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.3.9"
langchain_core = "0.3.21"
pydantic = "2.10.3"
requests = "2.32.3"
gitingest = "0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
