[tool.poetry]
name = "anonymize_pii"
version = "1.0.0"
description = "Glaider allows you to anonymize personally identifiable information (PII) in text data before processing it with AI models or storing it. The service automatically detects and anonymizes sensitive information such as personal names, locations, organizations, email addresses, IP addresses, access tokens, API keys, credit card numbers, and more."
authors = ["glaider <info@glaider.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.3.9"
langchain_core = "0.3.21"
pydantic = "2.10.3"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
